Add new messages to funbutton.html

--- a/funbutton.html
+++ b/funbutton.html
@@ -93,7 +93,13 @@
       "Nice try. But nothing happened again.",
       "I can see you lol",
       "tell lg i said hi",
-      "404 - errrrrrrrrrror"
+      "404 - errrrrrrrrrror",
+      "Alexander can solve math problems",
+      "DEDEDARDAR",
+      "José is sigma",
+      "Hi joey",
+      "I hope you have a [insert feeling here] day.",
+      "luke eats dog food lol"
 
     ];
 
