Refactor HTML structure and update favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>Glenn’s Totally Serious Website 😏</title> <link rel="icon" type="image/jpeg" href="yourimage.jpeg">
-<style> body { margin: 0; font-family: "Comic Sans MS", "Poppins", sans-serif; background: linear-gradient(135deg, #6b73ff, #000dff); color: white; text-align: center; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; overflow-x: hidden; }
+<!DOCTYPE html> 
+<html lang="en"> 
+  <head> 
+    <meta charset="UTF-8" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <title>Glenn’s Totally Serious Website 😏</title> 
+    <link rel="icon" type="image/jpeg" href="favicon.jpeg">
+    <style> body { margin: 0; font-family: "Comic Sans MS", "Poppins", sans-serif; background: linear-gradient(135deg, #6b73ff, #000dff); color: white; text-align: center; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; overflow-x: hidden; }
 h1 {
   font-size: 3rem;
   animation: float 3s ease-in-out infinite;
