--- a/dirt.html
+++ b/dirt.html
@@ -27,6 +27,15 @@
       font-size: 2em;
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
 </head>
 <body>
   <img src="https://png.pngtree.com/png-clipart/20231017/original/pngtree-dirt-pile-of-soil-png-image_13325769.png" alt="Dirt">
