--- a/funbutton.html
+++ b/funbutton.html
@@ -114,5 +114,15 @@
       setTimeout(() => { button.style.transform = ""; }, 200);
     }
   </script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
 </body>
 </html>
