--- a/games.html
+++ b/games.html
@@ -106,6 +106,16 @@ button:hover {
   100% { transform: translate(0, 0); }
 }
 </style>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
 </head>
 
 <body>
