Integrate Google Analytics tracking code
Added Google Analytics tracking script to the HTML file.

--- a/glennbot.html
+++ b/glennbot.html
@@ -64,6 +64,16 @@
       to {opacity: 1;}
     }
   </style>
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
 </head>
 <body>
   <h1>🤖 GlennBot 3000 🤖</h1>
