--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
         100% { transform: rotate(360deg); }
       }
     </style> 
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
   </head> 
 
   <body> 
