--- a/roast.html
+++ b/roast.html
@@ -61,6 +61,16 @@
       font-size: 1.2em;
     }
   </style>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
 </head>
 <body>
   <a href="index.html">← Home</a>
