--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         transform: scale(1.1);
         background-color: #ffde59;
       }
+<button id="alexanderButton" onclick="window.location.href='alexander.html'">
+🧠 Alexander’s Mini Corner
+      of the internet
+</button>
 
       footer {
         position: fixed;
@@ -96,6 +100,25 @@
 <button onclick="window.location.href='glennbot.html'">🤖 Talk to GlennBot 3000</button>
 <button onclick="window.location.href='roast.html'">🔥 Roast Machine 🔥</button>
 <button onclick="window.location.href='games.html'">🎮 Play Some Games!</button> <!-- NEW BUTTON -->
+#alexanderButton {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  background: white;
+  color: black;
+  border: 2px solid #888;
+  padding: 10px 18px;
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: bold;
+  z-index: 9999;
+  transition: 0.2s ease;
+}
+
+#alexanderButton:hover {
+  background: #efefef;
+  transform: scale(1.05);
+}
 
 
     <div class="secret" id="secret">🥋 You unlocked the Secret Ninja Mode! 🥋</div> 
