Update button link to 'Alexander Ai.html'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ur boy's website 😏</title> 
     <link rel="icon" type="image/jpeg" href="favicon.jpeg">
 
-    <button id="alexanderButton" onclick="window.location.href='alexander.html'">
+    <button id="alexanderButton" onclick="window.location.href='Alexander Ai.html'">
 🧠 Alexander’s Mini Corner
       of the internet
 </button>
